refactored transaction service